test/compile-errors/spec-signature-variadic.crow
main void()
	()

s spec
	x nat(...xs nat array)
